[gd_scene load_steps=11 format=3 uid="uid://ch6h6i4bpgdws"]

[ext_resource type="Script" uid="uid://x5npio2g0qdu" path="res://Enemy/WalkerEnemy.gd" id="1_6grqf"]
[ext_resource type="Texture2D" uid="uid://d08bdgi8bjo7b" path="res://Assets/Alienpng.png" id="2_vh5lm"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vh5lm"]
size = Vector2(16, 18)

[sub_resource type="AtlasTexture" id="AtlasTexture_2cne4"]
atlas = ExtResource("2_vh5lm")
region = Rect2(0, 0, 16, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7umf"]
atlas = ExtResource("2_vh5lm")
region = Rect2(32, 0, 16, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nqiev"]
atlas = ExtResource("2_vh5lm")
region = Rect2(48, 0, 16, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_by3v0"]
atlas = ExtResource("2_vh5lm")
region = Rect2(16, 0, 16, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_3esvi"]
atlas = ExtResource("2_vh5lm")
region = Rect2(64, 0, 16, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ch7h4"]
atlas = ExtResource("2_vh5lm")
region = Rect2(80, 0, 16, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_6grqf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cne4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7umf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nqiev")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_by3v0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3esvi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ch7h4")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[node name="WalkerEnemy" type="Area2D"]
collision_layer = 2
collision_mask = 12
script = ExtResource("1_6grqf")

[node name="DamageTimer" type="Timer" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vh5lm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -24)
scale = Vector2(1.25, 1.09375)
sprite_frames = SubResource("SpriteFrames_6grqf")
animation = &"walk"
frame_progress = 0.806547

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_damage_timer_timeout"]
